syntax = "proto3";

package utility;

import "google/protobuf/empty.proto";

message BannerResponse {
  // A string.
  string banner = 1;
}

message DonationAddressResponse {
  // A string.
  string address = 1;
}

message VersionResponse {
  // Any string name of the server's user agent. For stats purposes
  // only; may be empty, does not (usually) affect protocol behavior or
  // anything else. E.g.: "BobsServerImpl", etc.
  string agent = 1;
  // Version number X.Y.Z form (or X.Y)
  string version = 2;
}


message VersionRequest {
  // Any string name of the client's user agent. For stats purposes
  // only; may be empty, does not (usually) affect protocol behavior or
  // anything else. E.g.: "Electron-Cash", etc.
  string agent = 1;
  // Version number X.Y.Z form (or X.Y)
  string version = 2;
}

service Utility {
  // Return a banner to be shown in the Electron Cash console.
  rpc Banner(google.protobuf.Empty) returns (BannerResponse);
  // Return a server donation address.
  rpc DonationAddress(google.protobuf.Empty) returns (DonationAddressResponse);
  // Ping the server to ensure it is responding.
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Announces the client version and user agent to the server.
  // The server will then reply with its version information as well.
  rpc Version(VersionRequest) returns (VersionResponse);
}
